<resources>
    <string name="app_name">IfProf</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="professor">Professor</string>
    <string name="aluno">Aluno</string>
    <string name="meuPerfil">Meu Perfil</string>
    <string name="turmas">Turmas</string>
    <string name="avaliacoes">avaliações</string>
    <string name="disciplinas">Disciplinas</string>
    <string name="alunos">Alunos</string>
    <string name="notas">Notas</string>
    <string name="faltas">Faltas</string>
    <string name="sair">Sair</string>

    <string name="ler_qrcode">Corrigir prova</string>
    <string name="sair_conta">Sair da conta</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_main">MenuMain</string>
    <string name="title_activity_disciplina">Adicionar disciplina</string>
    <string name="title_activity_turmas">Adicionar  turma</string>
    <string name="title_activity_alunos">Adicionar aluno</string>
    <string name="title_activity_perfil">Adicionar Perfil</string>
    <string name="title_activity_avaliacoes">Adicionar avaliacão</string>
    <string name="title_activity_notas">Notas</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">open</string>
    <string name="title_activity_faltas">Frequencia</string>
    <string name="title_activity_set_photo">Foto de perfil</string>
    <string name="title_activity_show_turmas">Minhas turmas</string>
    <string name="title_activity_show_disciplinas">Minhas disciplinas</string>
    <string name="title_activity_show_alunos">Meus alunos</string>
    <string name="title_activity_see_more">Detalhes</string>
    <string name="title_activity_show_avaliacoes">Avaliacões</string>
    <string name="semDisciplina">Você não tem nenhuma disciplina!</string>
    <string name="semTurma">Você não tem nenhuma turma!</string>
    <string name="semAluno">Você não tem nenhum aluno!</string>
    <string name="semAvaliacao">Você não tem nenhuma avaliação!</string>
    <string name="title_activity_apresentation">Apresentation</string>
    <string name="title_activity_alternativas_marcadas">Alternativas Marcadas</string>
    <string name="turmas_sugeridas">Info2av#
        fabiano,2012878;
        maria,287873;
        cara,98789;
        ##Adm1av#
        marcos,233455;
        tiago,23444;##</string>
</resources>
