<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group
        android:title="@string/professor"
        android:checkableBehavior="single">
        <item
            android:id="@+id/itmMeuPerfil"
            android:title="@string/meuPerfil"
            android:icon="@drawable/ic_person_white_24dp"/>
        <item
            android:id="@+id/itmAvaliacoes"
            android:title="@string/avaliacoes"
            android:icon="@drawable/ic_event_available_white_24dp"/>
        <item
            android:id="@+id/itmQuestoes"
            android:title="Questões"
            android:icon="@drawable/ic_playlist_add_check_white_24dp"/>
        <item
            android:id="@+id/itmDisciplinas"
            android:title="@string/disciplinas"
            android:icon="@drawable/ic_content_paste_white_24dp"/>
    </group>
    <group
        android:title="@string/aluno"
        android:checkableBehavior="single">
        <item
            android:id="@+id/itmAlunos"
            android:title="@string/alunos"
            android:icon="@drawable/ic_school_white_24dp"/>
        <item
            android:id="@+id/itmNotas"
            android:title="@string/notas"
            android:icon="@drawable/ic_font_download_white_24dp"/>
        <item
            android:id="@+id/itmTurmas"
            android:title="@string/turmas"
            android:icon="@drawable/ic_group_white_24dp"/>
        <item
            android:id="@+id/itmFaltas"
            android:title="@string/faltas"
            android:icon="@drawable/ic_verified_user_white_24dp"/>
    </group>
</menu>